fix: back button size on mobile

--- a/src/styles/Room.module.css
+++ b/src/styles/Room.module.css
@@ -18,7 +18,7 @@
 	margin-right: auto;
 	z-index: 100;
 	top: 58vh;
-	width: 750px;
+	width: min(750px, 100vw);
 	height: 115px;
 	opacity: 0;
 	cursor: pointer;
